fix wrapping issue https://trello.com/c/RR6JnWE4/1348-need-to-wrap-checkbox-in-feedback-form

--- a/shared/ui/styles/feedback.less
+++ b/shared/ui/styles/feedback.less
@@ -98,5 +98,15 @@
 	}
 	.show-smiley {
 		margin-top: 10px;
+		// the 110px leaves room for the Tweet button
+		max-width: calc(100% - 110px);
+		#show-smiley-checkbox {
+			margin-left: -20px;
+		}
+		label {
+			display: block;
+			float: left;
+			margin-left: 20px !important;
+		}
 	}
 }
